kube-kafka-istio-goto/assets/kafka-producer-consumer.yml
apiVersion: v1
kind: Namespace
metadata:
  name: testspace
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer-consumer
  namespace: testspace
  labels:
    app: kafka-producer-consumer
spec:
  ports:
    - name: tcp
      nodePort: 31008
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: kafka-producer-consumer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka-producer-consumer
  namespace: testspace
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-producer-consumer
        version: v1
    spec:
      containers:
        - name: kafka-producer-consumer
          image: rmohammad/kafka-producer-consumer:5
          ports:
            - containerPort: 8080
      serviceAccountName: kafka-producer-consumer
