kube-kafka-istio-goto/assets/kafka-producer-consumer-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kafka-producer-consumer-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-producer-consumer
spec:
  hosts:
  - "*"
  gateways:
  - kafka-producer-consumer-gateway
  http:
  - match:
    - uri:
        exact: /send
    - uri:
        exact: /errors
    - uri:
        exact: /messages
    route:
    - destination:
        host: kafka-producer-consumer
        port:
          number: 8080
